--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ body::after{content:'';position:fixed;inset:0;pointer-events:none;background:rep
 
 <script>
 /* ===== GITHUB CONFIG ===== */
-const GITHUB_USER = "BobywanCompensator;
+const GITHUB_USER = "BobywanCompensator";
 const GITHUB_REPO = "CampagneCompensatorMark1";
 const GITHUB_TOKEN = "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";
 
