--- a/index.html
+++ b/index.html
@@ -624,23 +624,57 @@ sendBattleToGitHub({
 
   j.prepend(e);
 }
+function parseCSV(text) {
+  const rows = [];
+  let current = [];
+  let value = "";
+  let insideQuotes = false;
+
+  for (let i = 0; i < text.length; i++) {
+    const c = text[i];
+    const next = text[i + 1];
+
+    if (c === '"' && insideQuotes && next === '"') {
+      value += '"';
+      i++;
+    } else if (c === '"') {
+      insideQuotes = !insideQuotes;
+    } else if (c === "," && !insideQuotes) {
+      current.push(value);
+      value = "";
+    } else if (c === "\n" && !insideQuotes) {
+      current.push(value);
+      rows.push(current);
+      current = [];
+      value = "";
+    } else {
+      value += c;
+    }
+  }
+
+  current.push(value);
+  rows.push(current);
+  return rows;
+}
 async function loadBattlesFromCSV() {
-  const res = await fetch("https://raw.githubusercontent.com/BobywanCompensator/CampagneCompensatorMark1/main/data/batailles.csv");
+  const res = await fetch(
+    "https://raw.githubusercontent.com/BobywanCompensator/CampagneCompensatorMark1/main/data/batailles.csv"
+  );
   const text = await res.text();
 
-  const lines = text.trim().split("\n");
-  const headers = lines.shift().split(",");
+  const rows = parseCSV(text.trim());
+  const headers = rows.shift();
 
-  const battles = lines.map(line => {
-    const values = line.split(",");
+  const battles = rows.map(row => {
     const obj = {};
-    headers.forEach((h, i) => obj[h] = values[i]);
+    headers.forEach((h, i) => obj[h] = row[i]);
     return obj;
   });
 
   applyBattles(battles);
   buildJournalFromBattles(battles);
 }
+
 function applyBattles(battles) {
   battles.forEach(b => {
     const sector = sectors.find(s => s.name === b.secteur);
