--- a/index.html
+++ b/index.html
@@ -1,58 +1,30 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="UTF-8" />
-<title>Carte Galactique – Campagne COMPENSATOR</title>
-
-<style>
-/* --- (CSS inchangé, je ne le retouche pas) --- */
-</style>
-</head>
-
-<body>
-<div id="title-bar"></div>
-
-<div class="layout">
-<div id="map-container">
-<img id="map-bg" src="https://i.imgur.com/KwrORx4.png" alt="">
-<svg id="galaxy" viewBox="-520 -520 1040 1040"></svg>
-</div>
-
-<div class="journal-panel">
-  <div class="right-top">
-    <h2>Contrôle Galactique</h2>
-    <div id="factionBars"></div>
-  </div>
-  <div class="right-mid">
-    <h2>Classement des Seigneurs</h2>
-    <div id="warlordStats"></div>
-  </div>
-  <div class="right-bottom">
-    <h2>Journal</h2>
-    <div id="journal"></div>
-  </div>
-</div>
-</div>
-
 <script>
-
-/* =========================================================
-   🔥 PATCHES INCLUS
-   1. Bypass cache GitHub
-   2. Victoire défenseur sauvegardée correctement
-   3. Debug console
-========================================================= */
-
+/* ===== GITHUB CONFIG ===== */
 function cleanCSV(value) {
-  return (value || "").trim().replace(/^"(.*)"$/, "$1");
+  return (value || "")
+    .trim()
+    .replace(/^"(.*)"$/, "$1");
 }
 
-/* ===== UTIL ===== */
+/* =========================================================
+   ✅ PATCH 1 — helper anti-cache GitHub
+========================================================= */
 const noCache = () => "?nocache=" + Date.now();
 
 
+const GITHUB_USER = "BobywanCompensator";
+const GITHUB_REPO = "CampagneCompensatorMark1";
+const SCALE = 0.85;
+
+
+/* ===== WARLORDS ===== */
+let warlords = [];
+const warlordStats = {};
+const warlordPlayers = {};
+
+
 /* =========================================================
-   WARLORDS  (PATCH anti-cache)
+   ✅ PATCH 1 APPLIQUÉ ICI (anti-cache)
 ========================================================= */
 async function loadWarlordsFromCSV() {
   const res = await fetch(
@@ -69,7 +41,10 @@ async function loadWarlordsFromCSV() {
   lines.forEach(line => {
     if (!line.trim()) return;
 
-    const [id, nom, joueur, actif] = line.split(",");
+    const values = line.split(",");
+    if (values.length < 4) return;
+
+    const [id, nom, joueur, actif] = values.map(v => v.trim());
 
     if (actif === "1" && nom) {
       warlords.push(nom);
@@ -81,7 +56,7 @@ async function loadWarlordsFromCSV() {
 
 
 /* =========================================================
-   SECTORS INIT (PATCH anti-cache)
+   ✅ PATCH 1 APPLIQUÉ ICI (anti-cache)
 ========================================================= */
 async function loadInitialSectors() {
   const res = await fetch(
@@ -96,18 +71,30 @@ async function loadInitialSectors() {
   const initialOwners = {};
 
   lines.forEach(line => {
-    const [nom, owner] = line.split(",");
-    initialOwners[nom] = owner;
+    if (!line.trim()) return;
+
+    const parts = line.split(",");
+    if (parts.length < 2) return;
+
+    const nom = parts[0].trim();
+    const owner = parts[1].trim();
+
+    if (nom && owner) {
+      initialOwners[nom] = owner;
+    }
   });
 
   sectors.forEach(s => {
-    if (initialOwners[s.name]) s.owner = initialOwners[s.name];
+    if (initialOwners[s.name]) {
+      s.owner = initialOwners[s.name];
+    }
   });
 }
 
 
 /* =========================================================
-   BATTLES (PATCH anti-cache + debug)
+   ✅ PATCH 1 APPLIQUÉ ICI (anti-cache)
+   ✅ PATCH 3 DEBUG ajouté
 ========================================================= */
 async function loadBattlesFromCSV() {
   const res = await fetch(
@@ -133,11 +120,12 @@ async function loadBattlesFromCSV() {
 
 
 /* =========================================================
-   PATCH MAJEUR : victoire défenseur
+   ✅ PATCH 2 — victoire défenseur FIX
 ========================================================= */
 
 function openBattleConsole(sector){
-  if(battleOpen || sector.immutable) return;
+  if(battleOpen) return;
+  if(sector.immutable) return;
   battleOpen=true;
 
   const j=document.getElementById('journal');
@@ -158,43 +146,12 @@ function openBattleConsole(sector){
   <button class="cancel">Annuler</button>
   `;
 
-  /* ---------- ATTAQUANT (inchangé) ---------- */
-  e.querySelector('.awin').onclick=()=>{
-    const atk=e.querySelector('.atk').value;
-    const def=e.querySelector('.def').value;
 
-    const atkFaction=e.querySelector('.atkF').value;
-    const oldOwner=sector.owner;
-
-    sector.owner=atkFaction;
-    sector.battles++;
-    warlordStats[atk].win++;
-    warlordStats[def].loss++;
-
-    const lines=narrate(sector,atk,def,atkFaction,oldOwner,true);
-
-    j.prepend(makeEntry(lines));
-
-    sendBattleToGitHub({
-      date:new Date().toISOString(),
-      secteur:sector.name,
-      attaquant:atk,
-      defenseur:def,
-      faction_attaquant:atkFaction,
-      faction_defenseur:oldOwner,
-      resultat:"Victoire Attaquant",
-      titre:lines[0],
-      intro:lines[1],
-      conclusion:lines[2]
-    });
-
-    close();
-  };
-
-  /* ---------- ✅ DEFENSEUR PATCH COMPLET ---------- */
+  /* ===== DEFENSEUR PATCHÉ ===== */
   e.querySelector('.dwin').onclick=()=>{
     const atk=e.querySelector('.atk').value;
     const def=e.querySelector('.def').value;
+    if(!validWarlords(atk,def)) return;
 
     const oldOwner=sector.owner;
 
@@ -204,42 +161,30 @@ function openBattleConsole(sector){
 
     const lines=narrate(sector,atk,def,'',oldOwner,false);
 
-    j.prepend(makeEntry(lines));
+    const entry=document.createElement('div');
+    entry.className='journal-entry';
+    entry.innerHTML=`<div>${lines[0]}</div><div>${lines[1]}</div><div>${lines[2]}</div>`;
+    j.prepend(entry);
 
+    /* 🔥 FORMAT IDENTIQUE A ATTAQUANT (FIX) */
     sendBattleToGitHub({
-      date:new Date().toISOString(),
-      secteur:sector.name,
-      attaquant:atk,
-      defenseur:def,
-      faction_attaquant:"",
-      faction_defenseur:oldOwner,
-      resultat:"Victoire Défenseur",
-      titre:lines[0],
-      intro:lines[1],
-      conclusion:lines[2]
+      date: new Date().toISOString(),
+      secteur: sector.name,
+      attaquant: atk,
+      defenseur: def,
+      faction_attaquant: "",
+      faction_defenseur: oldOwner,
+      resultat: "Victoire Défenseur",
+      titre: lines[0],
+      intro: lines[1],
+      conclusion: lines[2]
     });
 
-    close();
-  };
-
-  function makeEntry(lines){
-    const d=document.createElement('div');
-    d.className='journal-entry';
-    d.innerHTML=`<div>${lines[0]}</div><div>${lines[1]}</div><div>${lines[2]}</div>`;
-    return d;
-  }
-
-  function close(){
     e.remove();
     battleOpen=false;
     render();
     renderWarlords();
-  }
-
-  e.querySelector('.cancel').onclick=close;
-  j.prepend(e);
+  };
 }
 
 </script>
-</body>
-</html>
